# mpg-api-example

./: .dockerignore  .env.template  .gitignore  README.md  docker-compose.yml  insomnia.yaml
applications/flask-api/: Dockerfile  pyproject.toml  run.py  start.sh
applications/flask-api/flask_api/: app.py  fillup.py  rest.py  vehicle.py
docker/cli/: poetry  psql  pytest
libraries/database/: alembic.ini  pyproject.toml
libraries/database/alembic/: env.py
libraries/database/alembic/versions/: 05fa0ae3869e_add_models.py
libraries/database/database/: __init__.py
libraries/database/database/models/: __init__.py  fillup.py  vehicle.py
