[tool.poetry]
name = "flask-api"
version = "0.1.0"
description = ""
authors = ["Vic Garcia <vic.garcia@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^2.0.1"
database = {path = "../../libraries/database", develop = true}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
