[tool.poetry]
name = "database"
version = "0.1.0"
description = ""
authors = ["Vic Garcia <vic.garcia@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.7"
psycopg2-binary = "^2.9.1"
SQLAlchemy = "^1.4.20"
alembic = "^1.6.5"
marshmallow = "^3.12.2"
marshmallow-sqlalchemy = "^0.26.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
